--- a/nmcnpmapp/templates/app/contact.html
+++ b/nmcnpmapp/templates/app/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ - Hệ thống Quản lý Thu phí</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/home.css' %}?v=3">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}?v=8">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}?v=2">
     <link rel="stylesheet" href="{% static 'css/services.css' %}?v=2">
     <link rel="stylesheet" href="{% static 'css/responsive-tablet.css' %}">
@@ -26,16 +26,52 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(to right, #ffffff, #d7e7f3);
+        }
+
         .fade-in {
             opacity: 0;
             transform: translateY(20px);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+            transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
         }
 
         .fade-in.is-visible {
             opacity: 1;
             transform: translateY(0);
+        }
+
+        .div-contact {
+            background: rgba(255, 255, 255, 0.8); /* Tạo nền trắng mờ */
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Tạo hiệu ứng nổi */
+            margin: 20px;
+            padding: 20px;
+        }
+
+        .div-contact {
+            display: flex;
+            align-items: center;
+        }
+        .div-image img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            margin-right: 20px;
+        }
+        .div-info {
+            flex: 1;
+        }
+
+        .address a {
+            color: #007bff; /* Màu xanh đặc trưng */
+            text-decoration: none;
+        }
+        .address a:hover {
+            text-decoration: underline;
         }
 
     </style>
@@ -149,6 +185,10 @@
         </div>
     </section>
 </main>
+
+<div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+    <a href="/" class="btn btn-primary">Quay lại Trang chủ</a>
+</div>
 
 <!-- Footer -->
 <footer class="footer mt-auto text-center">
