--- a/nmcnpmapp/templates/app/member.html
+++ b/nmcnpmapp/templates/app/member.html
@@ -7,7 +7,7 @@
     {% load static %}
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}?v=8">
     <link rel="stylesheet" href="{% static 'css/newstyles.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
