--- a/nmcnpmapp/templates/registration/signup.html
+++ b/nmcnpmapp/templates/registration/signup.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load widget_tweaks %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký - Hệ thống Quản lý Thu phí</title>
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="/static/css/msg.css">
     <link rel="stylesheet" href="/static/css/newstyles.css">
     <link rel="stylesheet" href="/static/css/responsive-tablet.css">
@@ -14,8 +15,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 
 <body>
@@ -42,7 +46,7 @@
         </div>
     </nav>
 
-    <!-- Sign Up -->
+    <!-- Sign Up Section -->
     <section class="login-section">
         <div class="container py-4 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -50,90 +54,61 @@
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="https://preview.redd.it/how-are-these-meme-pages-making-those-saiba-momoi-memes-v0-53aka4qux98d1.jpeg?width=640&crop=smart&auto=webp&s=29960e0173c0fb28c2448e8858dadfe0d8399050"
-                                    alt="signup form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                <img src="https://preview.redd.it/how-are-these-meme-pages-making-those-saiba-momoi-memes-v0-53aka4qux98d1.jpeg?width=640&crop=smart&auto=webp&s=29960e0173c0fb28c2448e8858dadfe0d8399050" alt="signup form" class="img-fluid"
+                                alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" /> 
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-3 text-black">
-
-                                    <form class="form-signup" method="post">
+                                    <form method="post">
                                         {% csrf_token %}
                                         <div class="d-flex align-items-center mb-3 pb-1">
                                             <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                                            <span class="h1 fw-bold mb-0">Đăng ký tài khoản</span>
+                                            <span class="h1 fw-bold mb-0">Quản lý chung cư</span>
                                         </div>
-                                    
-                                        <!-- Email -->
-                                        <div class="form-group" style="margin-top: 20px;">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Đăng ký tài khoản</h5>
+
+                                        <!-- Render Form Fields -->
+                                        {% for field in form %}
+                                            <div class="form-outline mb-4">
+                                                <div class="input-group">
+                                                    <!-- Input Group Prepend Icon -->
+                                                    <div class="input-group-prepend" id="inputGroupPrepend">
+                                                        <span class="input-group-text">
+                                                            <i class="fas fa-{{ field.name|lower }}"></i>
+                                                        </span>
+                                                    </div>
+                                                    
+                                                    <!-- Form Field -->
+                                                    {{ field|add_class:"form-control form-control-lg" }}
                                                 </div>
-                                                <input type="email" class="form-control" id="registry_email" name="registry_email" placeholder="Email của bạn">
-                                            </div>
-                                        </div>
-                                    
-                                        <!-- Username -->
-                                        <div class="form-group" style="margin-top: 20px;">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+
+                                                <!-- Placeholder for Field -->
+                                                {% if field.help_text %}
+                                                <small class="form-text text-muted">
+                                                    {{ field.help_text }}
+                                                </small>
+                                                {% endif %}
+
+                                                <!-- Error Messages -->
+                                                {% if field.errors %}
+                                                <div class="text-danger mt-2">
+                                                    {{ field.errors|join:" " }}
                                                 </div>
-                                                <input type="text" class="form-control" id="username" name="username" placeholder="Username của bạn">
+                                                {% endif %}
                                             </div>
-                                        </div>
-                                    
-                                        <!-- Phone Number -->
-                                        <div class="form-group" style="margin-top: 20px;">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fas fa-phone"></i></span>
-                                                </div>
-                                                <input type="text" class="form-control" id="phone_number" name="phone_number" placeholder="Số điện thoại">
-                                            </div>
-                                        </div>
-                                    
-                                        <!-- Room ID -->
-                                        <div class="form-group" style="margin-top: 20px;">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fas fa-home"></i></span>
-                                                </div>
-                                                <input type="text" class="form-control" id="room_id" name="room_id" placeholder="Số phòng">
-                                            </div>
-                                        </div>
-                                    
-                                        <!-- Password -->
-                                        <div class="form-group" style="margin-top: 20px;">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                                                </div>
-                                                <input type="password" class="form-control" id="password1" name="password1" placeholder="Mật khẩu của bạn">
-                                            </div>
-                                        </div>
-                                    
-                                        <!-- Confirm Password -->
-                                        <div class="form-group" style="margin-top: 20px;">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                                                </div>
-                                                <input type="password" class="form-control" id="password2" name="password2" placeholder="Nhập lại mật khẩu của bạn">
-                                            </div>
-                                        </div>
-                                    
+                                        {% endfor %}
+
+
                                         <!-- Submit Button -->
                                         <div class="pt-1 mb-4">
                                             <button class="btn btn-dark btn-lg btn-block" type="submit">Đăng ký</button>
                                         </div>
-                                    
+
                                         <!-- Redirect to Login -->
                                         <p class="mb-4 pb-lg-2" style="color: #393f81;">
                                             Đã có tài khoản? <a href="/login" style="color: #393f81;">Đăng nhập</a>
                                         </p>
-                                    </form>                                    
-
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -143,15 +118,35 @@
         </div>
     </section>
 
-    <!-- Toast messages -->
+    <!-- Toast Messages -->
     {% if messages %}
-    <div id="toast-container">
-        {% for message in messages %}
-            <div class="toast {{ message.tags }}">{{ message }}</div>
-        {% endfor %}
-    </div>
-    {% endif %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            toastr.options = {
+                "closeButton": true,
+                "debug": false,
+                "newestOnTop": true,
+                "progressBar": true,
+                "positionClass": "toast-top-right",
+                "preventDuplicates": true,
+                "onclick": null,
+                "showDuration": "300",
+                "hideDuration": "1000",
+                "timeOut": "5000",
+                "extendedTimeOut": "1000",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            };      
 
+            {% for message in messages %}
+            toastr["{{ message.tags }}"](`{{ message|escapejs }}`);
+            {% endfor %}
+        });
+    </script>
+    {% endif %}
+    
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const toasts = document.querySelectorAll('.toast');
@@ -162,8 +157,6 @@
             });
         });
     </script>
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
