Fix views.py and add noti to homepage

--- a/nmcnpmapp/templates/app/contact.html
+++ b/nmcnpmapp/templates/app/contact.html
@@ -186,9 +186,9 @@
     </section>
 </main>
 
-<div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+<!-- <div style="text-align: center; margin-top: 20px; margin-bottom: 20px; color: #323b44;">
     <a href="/" class="btn btn-primary">Quay lại Trang chủ</a>
-</div>
+</div> -->
 
 <!-- Footer -->
 <footer class="footer mt-auto text-center">
