--- a/nmcnpmapp/templates/app/homepage.html
+++ b/nmcnpmapp/templates/app/homepage.html
@@ -24,7 +24,7 @@
             .list-group {
                 overflow-y: auto;  /* Cho phép cuộn dọc */
                 padding: 10px;
-                background-color: #40313100; /* Màu nền nhẹ nhàng */
+                background-color: #40313100;
                 border-radius: 8px;
                 box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Để phần thông báo có bóng nhẹ */
                 margin-bottom: 30px;
@@ -36,7 +36,8 @@
                 padding: 15px;
                 border-radius: 8px;
                 background-color: #fff;
-                margin-bottom: 10px;
+                margin-top: 10px;
+                margin-bottom: 5px;
                 transition: transform 0.3s ease-in-out; /* Hiệu ứng di chuyển */
             }
 
