--- a/nmcnpmapp/templates/app/add_member.html
+++ b/nmcnpmapp/templates/app/add_member.html
@@ -27,8 +27,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="/"><i class="fas fa-home"></i> Trang chủ</a></li>
-                <li class="nav-item"><a class="nav-link" href="/service"><i class="fas fa-cogs"></i> Dịch vụ</a></li>
+                <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home"></i> Trang chủ</a></li>
+                <li class="nav-item active"><a class="nav-link" href="/service"><i class="fas fa-cogs"></i> Dịch vụ</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about"><i class="fas fa-info-circle"></i> Giới thiệu</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contact"><i class="fas fa-envelope"></i> Liên hệ</a></li>
                 <li class="nav-item"><a class="nav-link" href="/notification"><i class="fas fa-bell"></i> Thông báo</a></li>
@@ -54,10 +54,16 @@
     </nav>
 
     <!-- Header Section -->
-    <header class="homepage-header" style="background-color: #007bff; color: white; text-align: center; padding: 50px 0;">
-        <div class="container">
-            <h1 style="font-size: 2.5rem; font-weight: bold;">Hệ thống Quản lý Thu phí</h1>
-            <p style="font-size: 1.5rem; font-weight: bold;">Chung cư CNPM - Hà Nội</p>
+    <header class="homepage-header">
+        <div class="govuk-width-container">
+            <div class="homepage-header__title-container">
+                <h1 class="homepage-header__title">
+                    Hệ thống Quản lý Thu phí
+                </h1>
+                <span class="homepage-header__intro">
+                    Chung cư CNPM - Hà Nội
+                </span>
+            </div>
         </div>
     </header>
 
