--- a/nmcnpmapp/templates/app/contact.html
+++ b/nmcnpmapp/templates/app/contact.html
@@ -87,10 +87,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active"><a class="nav-link" href="/"><i class="fas fa-home"></i> Trang chủ</a></li>
+            <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home"></i> Trang chủ</a></li>
             <li class="nav-item"><a class="nav-link" href="/service"><i class="fas fa-cogs"></i> Dịch vụ</a></li>
             <li class="nav-item"><a class="nav-link" href="/about"><i class="fas fa-info-circle"></i> Giới thiệu</a></li>
-            <li class="nav-item"><a class="nav-link" href="/contact"><i class="fas fa-envelope"></i> Liên hệ</a></li>
+            <li class="nav-item active"><a class="nav-link" href="/contact"><i class="fas fa-envelope"></i> Liên hệ</a></li>
             <li class="nav-item"><a class="nav-link" href="/notification"><i class="fas fa-bell"></i> Thông báo</a></li>
         </ul>
         {% if user.is_authenticated %}
